--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon api/index.js",
-    "start":"node api/index.js"
+    "start": "node api/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.4.3",
+    "express": "^4.18.2",
+    "mongoose": "^8.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
